fix images alignment

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
 .hero-phones-container {
   margin-left: -80px;
   margin-right: -80px;
-  width: calc(100% + 160px - 12px);
+  width: calc(100% + 160px);
 }
 
 .hero {
@@ -66,8 +66,13 @@ body {
     width: 100%;
   }
 
+  .hero-phones-container > div {
+    width: 33.33%;
+  }
+
   .hero-phone-images {
-    height: 600px;
+    height: auto;
+    width: 100%;
   }
   .hero-phone-images:nth-child(2) {
     padding-left: 80px;
